Basic main added

--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,5 @@
-exp: TSE
+exp: Interact
 
 models: 
       hf_causal_model:
           - gpt2
-      hf_masked_model:
-          - bert-base-uncased
-
-predfpath: results/minimal_pairs.tsv
-
-condfpath: stimuli/minimal_pairs.tsv
