renamed experiment to evaluations, setup clearer results directories, renamed tse to minimal pairs for consistency

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,11 @@
-exp: Interact
+exp: MinimalPair
 
 models: 
       hf_causal_model:
           - gpt2
+
+predfpath: predictions/minimal_pairs.tsv
+
+condfpath: conditions/minimal_pairs.tsv
+
+verbose: False
