Adding ipykernel to environment

--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
     - bitsandbytes==0.42.0
     - datasets==2.20.0
     - evaluate==0.4.2
+    - ipykernel==6.29.5
     - jupyterlab==4.2.4
     - numpy==1.26.4
     - pandas==2.2.2
